--- a/dlc.html
+++ b/dlc.html
@@ -19,7 +19,7 @@
 				<a href="personajes.html" title="Personajes">PERSONAJES</a>
 				<a href="criaturas.html" title="Criaturas">CRIATURAS</a>
 				<a href="juego.html" title="Juego">JUEGO</a>
-				<a href="dlc.css" title="dlc">DLC</a>
+				<a href="dlc.html" title="dlc">DLC</a>
 				<a href="galeria.html" title="Galería">GALERÍA</a>
 				<a href="nosotros.html" title="">NOSOTROS</a>
     </nav>
@@ -168,4 +168,5 @@
     window.addEventListener('load', revelar);
   </script>
 </body>
+
 </html>
